--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.datasource.username=sa
 spring.datasource.password=
 spring.h2.console.path=/h2-console
 spring.jpa.show_sql=false
-spring.jpa.hibernate.ddl-auto: create
+spring.jpa.hibernate.ddl-auto: create-drop
 spring.datasource.url = jdbc:h2:file:/Users/hyuk/Downloads/fifainfo/src/main/resources
-spring.devtools.livereload.enabled=true
-spring.freemarker.cache=false
+#spring.devtools.livereload.enabled=true
+#spring.freemarker.cache=false
